[gd_scene format=3 uid="uid://dyorc5jvepffr"]

[ext_resource type="Script" uid="uid://cuhcudgdejra1" path="res://scripts/ui/inventory_ui.gd" id="1_7nagc"]

[node name="InventoryUI" type="Control" unique_id=2125366310]
custom_minimum_size = Vector2(0, 80)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7nagc")

[node name="InventoryPanel" type="Panel" parent="." unique_id=1591284179]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 580.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel" unique_id=774338156]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/MarginContainer" unique_id=1095329487]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer" unique_id=886324747]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üì¶ Your Inventory"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="InventoryPanel/MarginContainer/VBoxContainer" unique_id=1740626014]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="ItemInfoLabel" type="Label" parent="InventoryPanel/MarginContainer/VBoxContainer" unique_id=161736439]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Select an item..."
autowrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="InventoryPanel/MarginContainer/VBoxContainer" unique_id=1686472551]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UseButton" type="Button" parent="InventoryPanel/MarginContainer/VBoxContainer/ButtonsContainer" unique_id=1349938341]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
disabled = true
text = "‚úÖ Use Item"

[node name="SkipButton" type="Button" parent="InventoryPanel/MarginContainer/VBoxContainer/ButtonsContainer" unique_id=458637933]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "‚è≠Ô∏è Skip & Roll Dice"
